--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,15 +12,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: gradle
+- name: Checkout code
+  uses: actions/checkout@v4
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
+- name: Set up JDK 17
+  uses: actions/setup-java@v4
+  with:
+    java-version: '17'
+    distribution: 'temurin'
+    cache: gradle
+
+- name: Grant execute permission for gradlew
+  run: chmod +x gradlew
+
+- name: Build Release APK
+  run: ./gradlew assembleRelease -x lint
+
+- name: Upload Release APK
+  uses: actions/upload-artifact@v4
+  with:
+    name: app-release.apk
+    path: app/build/outputs/apk/release/app-release-unsigned.apk
