--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,6 +26,10 @@ jobs:
       - name: Build Release APK
         run: ./gradlew assembleRelease -x lint
 
+      # 🕵️‍♂️ This step lists the files to find the correct APK name
+      - name: List files in the output directory
+        run: ls -R app/build/outputs/apk/release
+
       - name: Upload Release APK
         uses: actions/upload-artifact@v4
         with:
